Added podcast update for Rejection livestream

--- a/_posts/2020-08-13_Futurism.md
+++ b/_posts/2020-08-13_Futurism.md
@@ -5,7 +5,7 @@ subtitle: "The Undiscovered Country"
 authors: [michael,moro]
 categories: [Moro and Mike]
 image: assets/images/2020-08-13.png
-#youtube: Rdh0pXzout8
+youtube: NPuBAQ395iw
 tags: [featured, upcoming, youtube, livestream, cybersecurity, leadership, careers, job hunting, management, emotional intelligence, rejection, hiring, management, recruiting]
 date: 2020-08-13 19:00:00
 #mp3_file: assets/mp3/2020-08-06_Handling_Rejection.mp3
