--- a/_posts/2020-08-13_Futurism.md
+++ b/_posts/2020-08-13_Futurism.md
@@ -6,7 +6,7 @@ authors: [michael,moro]
 categories: [Moro and Mike]
 image: assets/images/2020-08-13.png
 youtube: NPuBAQ395iw
-tags: [featured, upcoming, youtube, livestream, cybersecurity, leadership, careers, job hunting, management, emotional intelligence, rejection, hiring, management, recruiting]
+tags: [featured, upcoming, futurism, artificial intelligence, crispr]
 date: 2020-08-13 19:00:00
 #mp3_file: assets/mp3/2020-08-06_Handling_Rejection.mp3
 summary: Moro and Mike are joined by co-host Warren Lafountain to discuss Futurism and topics like Artificial Intelligence, CRISPR, Self-driving Cars, and more.
