Updated Futurism post

--- a/_posts/2020-08-13_Futurism.md
+++ b/_posts/2020-08-13_Futurism.md
@@ -15,7 +15,6 @@ summary: Moro and Mike are joined by co-host Warren Lafountain to discuss Futuri
 explicit: "no" #other option is no
 block: "no" #means is shown in itunes
 ---
-
 In this livestream we are joined by Warren Lafountain to discuss Futurism and Futurist topics.
 
 - Artificial Intelligence
@@ -24,3 +23,4 @@ In this livestream we are joined by Warren Lafountain to discuss Futurism and Fu
 
 Futurism is not about predicting the future: It is about reducing uncertainty by engaging discussions about unpredictable outcomes. We all know that disruptive change will come, but how should be treat it? What value can be derived by speculating about the future? What methods can serve us well in reducing uncertainty?
 
+## References
