Updated Futurism post

--- a/_posts/2020-08-13-Futurism.md
+++ b/_posts/2020-08-13-Futurism.md
@@ -21,4 +21,31 @@ In this livestream we are joined by Warren Lafountain to discuss Futurism and Fu
 
 Futurism is not about predicting the future: It is about reducing uncertainty by engaging discussions about unpredictable outcomes. We all know that disruptive change will come, but how should be treat it? What value can be derived by speculating about the future? What methods can serve us well in reducing uncertainty?
 
-## References
+# References
+
+## CRISPR
+
+Molteni, M., Huckins, G. \[Aug 1, 2020\]. [The WIRED Guide to Cripr](https://www.wired.com/story/wired-guide-to-crispr/). *Wired Magazine*. <https://www.wired.com/story/wired-guide-to-crispr/>
+
+No Author. \[n.d.\] [Questions and Answers about CRISPR](https://www.broadinstitute.org/what-broad/areas-focus/project-spotlight/questions-and-answers-about-crispr). *The Broad Institute*. <https://www.broadinstitute.org/what-broad/areas-focus/project-spotlight/questions-and-answers-about-crispr>
+
+Cohen, J. \[n.d.\] [CRISPR Articles](https://www.sciencemag.org/topic/crispr). *Science*. <https://www.sciencemag.org/topic/crispr>
+
+## Machine Learning
+
+Martin, S. \[Sep 2, 2019\]. [Top 7 Machine Learning Methods that Every Data Scientist Must Know](https://towardsdatascience.com/top-7-machine-learning-methods-that-every-data-scientist-must-know-84f5e5352ae1). *Towards Data Science*. <https://towardsdatascience.com/top-7-machine-learning-methods-that-every-data-scientist-must-know-84f5e5352ae1>
+
+Castanon, J. \[May 1, 2019\]. [10 Machine Learning Methods that Every Data Scientist Should Know](https://towardsdatascience.com/10-machine-learning-methods-that-every-data-scientist-should-know-3cc96e0eeee9). *Toward Data Science*. <https://towardsdatascience.com/10-machine-learning-methods-that-every-data-scientist-should-know-3cc96e0eeee9>
+
+Kaggle. \[n.d.\]. [Intro to Machine Learning](https://www.kaggle.com/learn/intro-to-machine-learning). *Kaggle Website*. <https://www.kaggle.com/learn/intro-to-machine-learning>
+
+No Author. \[n.d.\]. [Introduction to Machine Learning Methods](https://www.educba.com/machine-learning-methods/). *EDUCBA Website*. <https://www.educba.com/machine-learning-methods/>
+
+## Decision Intelligence / Decision Science
+
+Kozyrkov, C. \[Mar 19, 2020\]. [What does uncertainty mean](https://towardsdatascience.com/introduction-to-decision-intelligence-5d147ddab767). *Towards Data Science*. <https://towardsdatascience.com/introduction-to-decision-intelligence-5d147ddab767>
+
+Kozyrkov, C. \[Aug 2, 2019\]. [Introduction to Decision Intelligence](https://towardsdatascience.com/introduction-to-decision-intelligence-5d147ddab767). *Towards Data Science*. <https://towardsdatascience.com/introduction-to-decision-intelligence-5d147ddab767>
+
+Dowsett, C. \[Jan 24, 2019\]. [Data Science vs Decision Science](https://towardsdatascience.com/data-science-vs-decision-science-8f8d53ce25da). *Towards Data Science*. <https://towardsdatascience.com/data-science-vs-decision-science-8f8d53ce25da>
+
