Updated Futurism post

--- a/_posts/2020-08-13-Futurism.md
+++ b/_posts/2020-08-13-Futurism.md
@@ -23,6 +23,15 @@ Futurism is not about predicting the future: It is about reducing uncertainty by
 
 # References
 
+## Futurism and Futures Thinking
+
+[Futurism.com](https://futurism.com/) <https://futurism.com/>
+
+Webb, A. \[Mar 11, 2020\]. [How Futurists Cope with Uncertainty](https://medium.com/swlh/how-futurists-cope-with-uncertainty-a4fbdff4b8c6). *The Startup*. <https://medium.com/swlh/how-futurists-cope-with-uncertainty-a4fbdff4b8c6>
+
+No Author. \[Aug, 2019\]. [The Axes of Uncertainty](https://futuretodayinstitute.com/mu_uploads/2019/08/FTI_Axes.pdf). *Future Today Institute*. <https://futuretodayinstitute.com/mu_uploads/2019/08/FTI_Axes.pdf>
+
+
 ## CRISPR
 
 Molteni, M., Huckins, G. \[Aug 1, 2020\]. [The WIRED Guide to Cripr](https://www.wired.com/story/wired-guide-to-crispr/). *Wired Magazine*. <https://www.wired.com/story/wired-guide-to-crispr/>
@@ -49,3 +58,6 @@ Kozyrkov, C. \[Aug 2, 2019\]. [Introduction to Decision Intelligence](https://to
 
 Dowsett, C. \[Jan 24, 2019\]. [Data Science vs Decision Science](https://towardsdatascience.com/data-science-vs-decision-science-8f8d53ce25da). *Towards Data Science*. <https://towardsdatascience.com/data-science-vs-decision-science-8f8d53ce25da>
 
+## Nanotechnology
+
+[The Foresight Institute](https://foresight.org/) <https://foresight.org/>
