Updated Futurism post

--- a/_posts/2020-08-13-Futurism.md
+++ b/_posts/2020-08-13-Futurism.md
@@ -25,6 +25,10 @@ Futurism is not about predicting the future: It is about reducing uncertainty by
 
 ## Futurism and Futures Thinking
 
+[(Un)Ethical Futures Conference Reading List 2017](https://www.goodreads.com/list/show/118684._Un_Ethical_Futures_Conference_Reading_List_2017)
+
+[Surfing Uncertainty: Prediction, Action, and the Embodied Mind](https://www.goodreads.com/book/show/25823558-surfing-uncertainty)
+
 [Futurism.com](https://futurism.com/) <https://futurism.com/>
 
 Webb, A. \[Mar 11, 2020\]. [How Futurists Cope with Uncertainty](https://medium.com/swlh/how-futurists-cope-with-uncertainty-a4fbdff4b8c6). *The Startup*. <https://medium.com/swlh/how-futurists-cope-with-uncertainty-a4fbdff4b8c6>
@@ -50,6 +54,8 @@ Kaggle. \[n.d.\]. [Intro to Machine Learning](https://www.kaggle.com/learn/intro
 
 No Author. \[n.d.\]. [Introduction to Machine Learning Methods](https://www.educba.com/machine-learning-methods/). *EDUCBA Website*. <https://www.educba.com/machine-learning-methods/>
 
+Piper, K. \[Aug 13, 2020\]. [GPT-3, explained: This new language AI is uncanny, funny - and a big deal](https://www.vox.com/future-perfect/21355768/gpt-3-ai-openai-turing-test-language). *Vox*. <https://www.vox.com/future-perfect/21355768/gpt-3-ai-openai-turing-test-language>
+
 ## Decision Intelligence / Decision Science
 
 Kozyrkov, C. \[Mar 19, 2020\]. [What does uncertainty mean](https://towardsdatascience.com/introduction-to-decision-intelligence-5d147ddab767). *Towards Data Science*. <https://towardsdatascience.com/introduction-to-decision-intelligence-5d147ddab767>
@@ -60,4 +66,17 @@ Dowsett, C. \[Jan 24, 2019\]. [Data Science vs Decision Science](https://towards
 
 ## Nanotechnology
 
+[Engines of Creation 2.0: The Coming Era of Nanotechnology](https://www.goodreads.com/book/show/1428029.Engines_of_Creation_2_0?from_search=true&from_srp=true&qid=BKir9uyKcB&rank=2)
+
 [The Foresight Institute](https://foresight.org/) <https://foresight.org/>
+
+## Transhumanism
+
+[Natural-Born Cyborgs: Minds, Technologies, and the Future of Human Intelligence](https://www.goodreads.com/book/show/170465.Natural_Born_Cyborgs?ac=1&from_search=true&qid=A8kydc7yNu&rank=1)
+
+[Being There: Putting Brain, Body, and World Together Again](https://www.goodreads.com/book/show/291290.Being_There)
+
+[Great Mambo Chicken and the Transhuman Condition: Science Slightly Over the Edge](https://www.goodreads.com/book/show/665412.Great_Mambo_Chicken_And_The_Transhuman_Condition?from_search=true&from_srp=true&qid=Fl6yo6BbMw&rank=1)
+
+
+
