Updated Futurism post

--- a/_posts/2020-08-13-Futurism.md
+++ b/_posts/2020-08-13-Futurism.md
@@ -25,6 +25,8 @@ Futurism is not about predicting the future: It is about reducing uncertainty by
 
 ## Futurism and Futures Thinking
 
+Gorbis, M. \[Mar 11, 2019\]. [Five Principles for Thinking Like a Futurist](https://er.educause.edu/articles/2019/3/five-principles-for-thinking-like-a-futurist). *EDUCAUSE Review*. <https://er.educause.edu/articles/2019/3/five-principles-for-thinking-like-a-futurist>
+
 [(Un)Ethical Futures Conference Reading List 2017](https://www.goodreads.com/list/show/118684._Un_Ethical_Futures_Conference_Reading_List_2017)
 
 [Surfing Uncertainty: Prediction, Action, and the Embodied Mind](https://www.goodreads.com/book/show/25823558-surfing-uncertainty)
