Updated Futurism post

--- a/_posts/2020-08-13-Futurism.md
+++ b/_posts/2020-08-13-Futurism.md
@@ -27,6 +27,10 @@ Rule #1 of Futures Thinking is forget about predictions. Futures Thinking is abo
 
 # References
 
+## Blockchain
+
+<http://graphics.reuters.com/TECHNOLOGY-BLOCKCHAIN/010070P11GN/index.html>
+
 ## Futurism and Futures Thinking
 
 Gorbis, M. \[Mar 11, 2019\]. [Five Principles for Thinking Like a Futurist](https://er.educause.edu/articles/2019/3/five-principles-for-thinking-like-a-futurist). *EDUCAUSE Review*. <https://er.educause.edu/articles/2019/3/five-principles-for-thinking-like-a-futurist>
