Updated Futurism post

--- a/_posts/2020-08-13-Futurism.md
+++ b/_posts/2020-08-13-Futurism.md
@@ -6,8 +6,11 @@ authors: [michael,moro]
 categories: [Moro and Mike]
 image: assets/images/2020-08-13.png
 youtube: NPuBAQ395iw
-tags: [featured, upcoming, futurism, artificial intelligence, crispr]
+tags: [featured, futurism, artificial intelligence, crispr, decision intelligence, self-driving cars, machine learning, blockchain]
 date: 2020-08-13 19:00:00
+mp3_file: assets/mp3/2020-08-13_Futurism.mp3
+duration: "01:48:13" #audio length in min
+length: "101302692" #filesize in byte
 summary: Moro and Mike are joined by co-host Warren Lafountain to discuss Futurism and topics like Artificial Intelligence, CRISPR, Self-driving Cars, and more.
 explicit: "no" #other option is no
 block: "no" #means is shown in itunes
@@ -18,6 +21,7 @@ In this livestream we are joined by Warren Lafountain to discuss Futurism and Fu
 - Artificial Intelligence
 - CRISPR
 - Self-driving Cars
+- Blockchain
 
 Futurism is not about predicting the future: It is about reducing uncertainty by engaging discussions about unpredictable outcomes. We all know that disruptive change will come, but how should be treat it? What value can be derived by speculating about the future? What methods can serve us well in reducing uncertainty?
 
