--- a/_posts/2020-08-13-Futurism.md
+++ b/_posts/2020-08-13-Futurism.md
@@ -25,6 +25,8 @@ In this livestream we are joined by Warren Lafountain to discuss Futurism and Fu
 
 Futurism is not about predicting the future: It is about reducing uncertainty by engaging discussions about unpredictable outcomes. We all know that disruptive change will come, but how should be treat it? What value can be derived by speculating about the future? What methods can serve us well in reducing uncertainty?
 
+[![thumbnail for {{page.title}} youtube video]({{page.image | relative_url}})](https://youtu.be/{{page.youtube}} "{{page.title}}")
+
 # Rule 1: Forget about Predictions
 
 Rule #1 of Futures Thinking is forget about predictions. Futures Thinking is about reducing uncertainty, and building readiness for an uncertain future. By exploring our goals, desires, and beliefs about the future we can uncover patterns, recognize signals of disruption, and promote readiness.
